Create a route by API flow
