# src/app/services/swagger.json
@@ -67,9 +67,13 @@
     "Route": {
       "type": "object",
       "properties": {
-        "initialDestination": { "type": "string" },
-        "finalDestination": { "type": "string" },
-        "price": {
+        "Destinations": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "Price": {
           "type": "number"
         }
       }
